section 4 image added

--- a/index.html
+++ b/index.html
@@ -61,22 +61,26 @@
         </div>
         <div class="section" id="section3">
             <div class="row">
-                <div class="large-6 medium-6 columns w-half section3ColumnLeft" id="leftHalf">
-                    Left section
+                <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div>
-                <div class="large-6 medium-6 columns w-half section3ColumnRight" id="rightHalf">
+                <div class="large-5 medium-5 columns w-half section3ColumnLeft" id="leftHalf">
+                    <img class="imageCard" src="./assets/section images/imageCard.jpeg" alt="">
+                </div>
+                <div class="large-5 medium-5 columns w-half section3ColumnRight" id="rightHalf">
                     Right section
                 </div>
+                <!-- <div class="large-1 medium-1 columns w-half section3ColumnLeft" id="leftHalf">
+                </div> -->
             </div>
         </div>
 
         <div class="section" id="section4">
             <div class="row">
-                <div class="large-6 medium-6 columns w-half section4ColumnLeft" id="leftHalf">
-                    Left section
+                <div class="large-6 medium-6 columns w-half section4Column" id="leftHalf">
+                    <img class="imageCard" src="./assets/section images/imageCard.jpeg" alt="">
                 </div>
-                <div class="large-6 medium-6 columns w-half section4ColumnRight" id="rightHalf">
-                    Right section
+                <div class="large-6 medium-6 columns w-half section4Column" id="rightHalf">
+                    <img class="imageCard" src="./assets/section images/imageCard.jpeg" alt="">
                 </div>
             </div>
         </div>
