--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
                 <div class="large-6 medium-6 columns w-half section2ColumnLeft" id="leftHalf">
                     <div class="icon-div">
                         <img class="icon1" src="./assets/icons/icon 1.png" alt="">
-                        <h3 class="cardHead">Big on protection</h3>
+                        <p class="cardHead">Big on protection</p>
                     </div>
                     <div>
                         <h2 class="cardContent" style="margin-bottom: 15px;">Stay visible on the grid</h2>
                     </div>
                     <div>
                         <p class="div-content">
-                            Precise location sharing enabled by what3words <br> tells the emergency services exactly
+                            Precise location sharing enabled by <span> what3words </span> <br> tells the emergency
+                            services exactly
                             where you <br>
                             are – even if you aren’t sure.
                         </p>
@@ -60,27 +61,43 @@
             </div>
         </div>
         <div class="section" id="section3">
-            <div class="row">
+            <div class="row section3row">
                 <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div>
-                <div class="large-5 medium-5 columns w-half section3ColumnLeft" id="leftHalf">
-                    <img class="imageCard" src="./assets/section images/imageCard.jpeg" alt="">
+                <div class="large-6 medium-5 columns w-half section3ColumnLeft" id="leftHalf">
+                    <img class="imageCard" src="./assets/pictures/imageCard.jpeg" alt="">
                 </div>
-                <div class="large-5 medium-5 columns w-half section3ColumnRight" id="rightHalf">
-                    Right section
+                <div class="large-6 medium-5 columns w-half section3ColumnRight" id="rightHalf">
+                    <!-- <img class="imageCard" src="./assets/pictures/card.png" alt=""> -->
+
+                    <div class="section3Card">
+                        <h4 class="section3CardHead">
+                            No data, no problem
+                        </h4>
+                        <p class="section3CardContent">
+                            Embedded precision location technology means 
+                            emergency services can find you to within 3m ,
+                            anywhere on Earth. Your
+                            location: always known and easy to share.
+                        </p>
+                    </div>
                 </div>
-                <!-- <div class="large-1 medium-1 columns w-half section3ColumnLeft" id="leftHalf">
-                </div> -->
+                <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="leftHalf">
+                </div>
             </div>
         </div>
 
         <div class="section" id="section4">
             <div class="row">
+                <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
+                </div>
                 <div class="large-6 medium-6 columns w-half section4Column" id="leftHalf">
-                    <img class="imageCard" src="./assets/section images/imageCard.jpeg" alt="">
+                    <img class="imageCard" src="/assets/pictures/Image card.png" alt="">
                 </div>
                 <div class="large-6 medium-6 columns w-half section4Column" id="rightHalf">
-                    <img class="imageCard" src="./assets/section images/imageCard.jpeg" alt="">
+                    <img class="imageCard" src="/assets/pictures/imageCard.jpeg" alt="">
+                </div>
+                <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div>
             </div>
         </div>
@@ -91,6 +108,17 @@
                 </div>
                 <div class="large-6 medium-6 columns w-half section5ColumnRight" id="rightHalf">
                     Right section
+                </div>
+            </div>
+        </div>
+        <div class="section" id="section6">
+            <div class="row bottom-div">
+                <h2 class="bottom-text">Section Ended</h2>
+            </div>
+            <div class="row">
+                <div class="large-6 medium-6 columns w-half section6ColumnLeft" id="leftHalf">
+                </div>
+                <div class="large-6 medium-6 columns w-half section6ColumnRight" id="rightHalf">
                 </div>
             </div>
         </div>
