--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" crossorigin="anonymous"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"
     integrity="sha512-gSf3NCgs6wWEdztl1e6vUqtRP884ONnCNzCpomdoQ0xXsk06lrxJsR7jX5yM/qAGkPGsps+4bLV5IEjhOZX+gg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.0.0/js/foundation.min.js"
         integrity="sha512-Z/+KrKwu8/OaOvNp032BfmvlNDTOanmV4qkWiBQnElfp2G4V78V100MKTcVXcY2UAiP/jL8K1K6xpmOcvLLUsA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
