images added in divs for demo

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                 <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div>
                 <div class="large-6 medium-5 columns w-half section3ColumnLeft" id="leftHalf">
-                    <img class="imageCard" src="./assets/pictures/imageCard.jpeg" alt="">
+                    <img class="imageCard" src="./assets/pictures/image-card2.jpeg" alt="">
                 </div>
                 <div class="large-6 medium-5 columns w-half section3ColumnRight" id="rightHalf">
-                    <!-- <img class="imageCard" src="./assets/pictures/card.png" alt=""> -->
+                    <img class="imageCard" src="./assets/pictures/card-nodata.png" alt="">
 
-                    <div class="section3Card">
+                    <!-- <div class="section3Card">
                         <h4 class="section3CardHead">
                             No data, no problem
                         </h4>
@@ -80,7 +80,7 @@
                             anywhere on Earth. Your
                             location: always known and easy to share.
                         </p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="leftHalf">
                 </div>
@@ -92,10 +92,10 @@
                 <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div>
                 <div class="large-6 medium-6 columns w-half section4Column" id="leftHalf">
-                    <img class="imageCard" src="/assets/pictures/Image card.png" alt="">
+                    <img class="imageCard" src="/assets/pictures/Info-card2.png" alt="">
                 </div>
                 <div class="large-6 medium-6 columns w-half section4Column" id="rightHalf">
-                    <img class="imageCard" src="/assets/pictures/imageCard.jpeg" alt="">
+                    <img class="imageCard" src="/assets/pictures/Image-card.png" alt="">
                 </div>
                 <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div>
@@ -103,17 +103,20 @@
         </div>
         <div class="section" id="section5">
             <div class="row">
+                <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
+                </div>
                 <div class="large-6 medium-6 columns w-half section5ColumnLeft" id="leftHalf">
-                    Left section
                 </div>
                 <div class="large-6 medium-6 columns w-half section5ColumnRight" id="rightHalf">
-                    Right section
+                    <img src="/assets/pictures/Info-card.png" alt="">
                 </div>
+                <!-- <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
+                </div> -->
             </div>
         </div>
         <div class="section" id="section6">
             <div class="row bottom-div">
-                <h2 class="bottom-text">Section Ended</h2>
+                <h2 class="bottom-text">Animation Ending </Section></h2>
             </div>
             <div class="row">
                 <div class="large-6 medium-6 columns w-half section6ColumnLeft" id="leftHalf">
