--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div>
                 <div class="large-6 medium-6 columns w-half section4Column" id="leftHalf">
-                    <img class="imageCard" src="/assets/pictures/Info-card2.png" alt="">
+                    <img class="imageCard" src="./assets/pictures/Info-card2.png" alt="">
                 </div>
                 <div class="large-6 medium-6 columns w-half section4Column" id="rightHalf">
-                    <img class="imageCard" src="/assets/pictures/Image-card.png" alt="">
+                    <img class="imageCard" src="./assets/pictures/Image-card.png" alt="">
                 </div>
                 <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div>
@@ -108,7 +108,7 @@
                 <div class="large-6 medium-6 columns w-half section5ColumnLeft" id="leftHalf">
                 </div>
                 <div class="large-6 medium-6 columns w-half section5ColumnRight" id="rightHalf">
-                    <img src="/assets/pictures/Info-card.png" alt="">
+                    <img class="imageCard" src="./assets/pictures/Info-card.png" alt="">
                 </div>
                 <!-- <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div> -->
