--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 <div class="large-6 medium-6 columns w-half section5ColumnRight" id="rightHalf">
                     <img class="imageCard" src="./assets/pictures/Info-card.png" alt="">
                 </div>
-                <!-- <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
-                </div> -->
+                <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
+                </div>
             </div>
         </div>
         <div class="section" id="section6">
