Text Color cahnged

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </div>
         </div>
         <div class="section" id="section2">
-            <div class="row bottom-div">
-                <h2 class="bottom-text">Always-on safety</h2>
+            <div class="row bottom-div" id="bottom-div" >
+                <h2 class="bottom-text"><span class="spn1">Always-on </span> safety</h2>
             </div>
             <div class="row">
                 <div class="large-6 medium-6 columns w-half section2ColumnLeft" id="leftHalf">
@@ -49,7 +49,7 @@
                     </div>
                     <div>
                         <p class="div-content">
-                            Precise location sharing enabled by <span> what3words </span> <br> tells the emergency
+                            Precise location sharing enabled by <span class="spn2"> what3words </span> <br> tells the emergency
                             services exactly
                             where you <br>
                             are – even if you aren’t sure.
@@ -65,7 +65,7 @@
                 <div class="large-2 medium-1 columns w-half section3ColumnLeft" id="">
                 </div>
                 <div class="large-6 medium-5 columns w-half section3ColumnLeft" id="leftHalf">
-                    <img class="imageCard" src="./assets/pictures/image-card2.jpeg" alt="">
+                    <img class="imageCard" src="./assets/pictures/image-card2.png" alt="">
                 </div>
                 <div class="large-6 medium-5 columns w-half section3ColumnRight" id="rightHalf">
                     <img class="imageCard" src="./assets/pictures/card-nodata.png" alt="">
